@@ -3,9 +3,9 @@
 
 package io.github.dlbbld.ashlarchess.board.enums;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
-import io.github.dlbbld.ashlarchess.common.exceptions.NonePointerException;
+import io.github.dlbbld.ashlarchess.exceptions.NonePointerException;
 
 public enum PromotionPieceType {
   ROOK(PieceType.ROOK),
@@ -17,7 +17,7 @@ public enum PromotionPieceType {
   @SuppressWarnings("null")
   // Move-ordering rule (Q, R, B, N) - see PromotionPieceTypeUtility for the rationale.
   // Enum declaration above keeps the static catalog order (P, R, N, B, Q, K) shared with PieceType.
-  public static final ImmutableList<PromotionPieceType> REAL = ImmutableList.of(QUEEN, ROOK, BISHOP, KNIGHT);
+  public static final List<PromotionPieceType> REAL = List.of(QUEEN, ROOK, BISHOP, KNIGHT);
 
   private final PieceType pieceType;
 
