@@ -3,10 +3,10 @@
 
 package io.github.dlbbld.ashlarchess.board.enums;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
-import io.github.dlbbld.ashlarchess.common.exceptions.NonePointerException;
-import io.github.dlbbld.ashlarchess.common.exceptions.ProgrammingMistakeException;
+import io.github.dlbbld.ashlarchess.exceptions.NonePointerException;
+import io.github.dlbbld.ashlarchess.exceptions.ProgrammingMistakeException;
 import io.github.dlbbld.ashlarchess.messages.Message;
 
 public enum Side {
@@ -16,7 +16,7 @@ public enum Side {
   NONE(false, false, "");
 
   @SuppressWarnings("null")
-  public static final ImmutableList<Side> REAL = ImmutableList.of(WHITE, BLACK);
+  public static final List<Side> REAL = List.of(WHITE, BLACK);
 
   private final boolean isWhite;
   private final boolean isBlack;
