@@ -3,9 +3,9 @@
 
 package io.github.dlbbld.ashlarchess.fen;
 
-import org.eclipse.jdt.annotation.NonNull;
+import java.util.List;
 
-import com.google.common.collect.ImmutableList;
+import org.eclipse.jdt.annotation.NonNull;
 
 /**
  * One forgiven FEN-level deviation surfaced by the lenient FEN parser. The parser preserves the user's intent and
@@ -24,10 +24,10 @@ public record ForgivenFenItem(ForgivenFenItemCode code, String original, String 
 
   /**
    * Shared empty list for the "no deviations forgiven" case. Centralised here so the {@code @NonNull} suppression on
-   * Guava's {@code ImmutableList.of()} (which JDT cannot statically prove is non-null with non-null elements) lives in
-   * one place rather than at every caller.
+   * the JDK {@code List.of()} (which JDT cannot statically prove is non-null with non-null elements) lives in one place
+   * rather than at every caller.
    */
   @SuppressWarnings("null")
-  public static final @NonNull ImmutableList<@NonNull ForgivenFenItem> NO_ITEMS = ImmutableList.of();
+  public static final @NonNull List<@NonNull ForgivenFenItem> NO_ITEMS = List.of();
 
 }
