@@ -3,9 +3,9 @@
 
 package io.github.dlbbld.ashlarchess.pgn;
 
-import org.eclipse.jdt.annotation.NonNull;
+import java.util.List;
 
-import com.google.common.collect.ImmutableList;
+import org.eclipse.jdt.annotation.NonNull;
 
 /**
  * One tag-level deviation surfaced by the lenient PGN parser. The parse model preserves input as given; this record is
@@ -22,10 +22,10 @@ public record ForgivenTagItem(ForgivenTagItemCode code, String tagName, String d
 
   /**
    * Shared empty list for the "no tag deviations forgiven" case. Centralised here so the {@code @NonNull} suppression
-   * on Guava's {@code ImmutableList.of()} (which JDT can't statically prove is non-null with non-null elements) lives
-   * in one place rather than at every caller.
+   * on the JDK {@code List.of()} (which JDT can't statically prove is non-null with non-null elements) lives in one
+   * place rather than at every caller.
    */
   @SuppressWarnings("null")
-  public static final @NonNull ImmutableList<@NonNull ForgivenTagItem> NO_ITEMS = ImmutableList.of();
+  public static final @NonNull List<@NonNull ForgivenTagItem> NO_ITEMS = List.of();
 
 }
