@@ -6,11 +6,9 @@ package io.github.dlbbld.ashlarchess.pgn;
 import java.util.ArrayList;
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-
-import io.github.dlbbld.ashlarchess.common.exceptions.NonePointerException;
-import io.github.dlbbld.ashlarchess.common.exceptions.ProgrammingMistakeException;
-import io.github.dlbbld.ashlarchess.common.utility.ListUtility;
+import io.github.dlbbld.ashlarchess.exceptions.NonePointerException;
+import io.github.dlbbld.ashlarchess.exceptions.ProgrammingMistakeException;
+import io.github.dlbbld.ashlarchess.internal.ListUtility;
 
 enum SetUpTagValue {
   START_FROM_INITIAL_POSITION("0"),
@@ -18,8 +16,7 @@ enum SetUpTagValue {
   NONE("");
 
   @SuppressWarnings("null")
-  public static final ImmutableList<SetUpTagValue> REAL = ImmutableList.of(START_FROM_INITIAL_POSITION,
-      START_FROM_SETUP_POSITION);
+  public static final List<SetUpTagValue> REAL = List.of(START_FROM_INITIAL_POSITION, START_FROM_SETUP_POSITION);
 
   private final String value;
 
