@@ -4,21 +4,20 @@
 package io.github.dlbbld.ashlarchess.squares;
 
 import java.util.EnumMap;
-
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
+import java.util.Map;
+import java.util.Set;
 
 import io.github.dlbbld.ashlarchess.board.enums.Side;
 import io.github.dlbbld.ashlarchess.board.enums.Square;
-import io.github.dlbbld.ashlarchess.common.Nulls;
+import io.github.dlbbld.ashlarchess.internal.Nulls;
 
 final class PawnTwoAdvanceEmptyBoardSquares {
 
   private PawnTwoAdvanceEmptyBoardSquares() {
   }
 
-  private static final ImmutableMap<Square, ImmutableSet<Square>> PAWN_WHITE_SQUARES_MAP;
-  private static final ImmutableMap<Square, ImmutableSet<Square>> PAWN_BLACK_SQUARES_MAP;
+  private static final Map<Square, Set<Square>> PAWN_WHITE_SQUARES_MAP;
+  private static final Map<Square, Set<Square>> PAWN_BLACK_SQUARES_MAP;
 
   static {
     PAWN_WHITE_SQUARES_MAP = build(Side.WHITE);
@@ -30,21 +29,21 @@ final class PawnTwoAdvanceEmptyBoardSquares {
 
   // Two-square advance is only available from the player's starting rank (2 for white, 7 for black).
   @SuppressWarnings("null")
-  private static ImmutableMap<Square, ImmutableSet<Square>> build(Side side) {
+  private static Map<Square, Set<Square>> build(Side side) {
     final int startRank = side == Side.WHITE ? 2 : 7;
     final int targetRank = side == Side.WHITE ? 4 : 5;
-    final EnumMap<Square, ImmutableSet<Square>> map = Nulls.newEnumMap(Square.class);
+    final EnumMap<Square, Set<Square>> map = Nulls.newEnumMap(Square.class);
     for (final Square from : Square.REAL) {
       if (from.getRank().getNumber() == startRank) {
-        map.put(from, ImmutableSet.of(Square.of(from.getFile().getNumber(), targetRank)));
+        map.put(from, Set.of(Square.of(from.getFile().getNumber(), targetRank)));
       } else {
-        map.put(from, ImmutableSet.of());
+        map.put(from, Set.of());
       }
     }
     return Nulls.copyOfMap(map);
   }
 
-  public static ImmutableSet<Square> getPawnSquares(Side side, Square fromSquare) {
+  public static Set<Square> getPawnSquares(Side side, Square fromSquare) {
     return switch (side) {
       case BLACK -> Nulls.get(PAWN_BLACK_SQUARES_MAP, fromSquare);
       case WHITE -> Nulls.get(PAWN_WHITE_SQUARES_MAP, fromSquare);
